Add new API endpoint to list all deal alert consents
